force-app/main/default/objects/Ju_kokyakutaiou__c/Ju_kokyakutaiou__c.object-meta.xml
<CustomObject>
    <description>得意先の売り上げが関連しない行動履歴</description>
    <label>得意先課題</label>
    <nameField>
        <label>得意先課題名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>