force-app/main/default/objects/Ju_kokyakutaiou__c/fields/Ju_kadaikategori__c.field-meta.xml
<CustomField>
    <fullName>Ju_kadaikategori__c</fullName>
    <label>課題カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>価格交渉（値上げ）</fullName>
            </value>
            <value>
                <fullName>相談対応</fullName>
            </value>
            <value>
                <fullName>クレーム対応</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>