force-app/main/default/objects/Ju_kokyakutaiou__c/fields/Ju_ksyodan01__c.field-meta.xml
<CustomField>
    <fullName>Ju_ksyodan01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>得意先課題</relationshipLabel>
    <relationshipName>syodan002</relationshipName>
    <type>Lookup</type>
</CustomField>