force-app/main/default/objects/Ju_kokyakutaiou__c/fields/ju_syosai01__c.field-meta.xml
<CustomField>
    <fullName>ju_syosai01__c</fullName>
    <label>詳細</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>