force-app/main/default/objects/Ju_kokyakutaiou__c/fields/ju_taiou01__c.field-meta.xml
<CustomField>
    <fullName>ju_taiou01__c</fullName>
    <label>対応期限</label>
    <type>Date</type>
</CustomField>