force-app/main/default/objects/Ju_kokyakutaiou__c/fields/ju_tokuisakik01__c.field-meta.xml
<CustomField>
    <fullName>ju_tokuisakik01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>得意先課題</relationshipLabel>
    <relationshipName>ju_tokuisakik001</relationshipName>
    <type>Lookup</type>
</CustomField>