force-app/main/default/objects/Ju_kokyakutaiou__c/fields/ju_tokuisakitan01__c.field-meta.xml
<CustomField>
    <fullName>ju_tokuisakitan01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>*得意先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>得意先課題</relationshipLabel>
    <relationshipName>ju_tokuisakitan001</relationshipName>
    <type>Lookup</type>
</CustomField>