force-app/main/default/objects/Ju_kokyakutaiou__c/recordTypes/ju_tokuisakikadai_recordtype.recordType-meta.xml
<RecordType>
    <fullName>ju_tokuisakikadai_recordtype</fullName>
    <active>true</active>
    <label>住環境</label>
</RecordType>