force-app/main/default/objects/Ju_kokyakutaiou__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ju_tokuisakik01__c</columns>
    <columns>ju_tokuisakitan01__c</columns>
    <columns>Ju_kadaikategori__c</columns>
    <columns>ju_syosai01__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ju_kadaizyoukyou__c</columns>
    <columns>ju_taiou01__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>